# cute-bench

./: README.md  hello.py  pyproject.toml
cute_bench/: __init__.py  benchmark.py
examples/: benchmark_matmul.py  plot_matmul_benchmark.py
tests/: test_kernel_measurement.py
