[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cute-bench"
version = "0.1.0"
description = "Simple GPU kernel benchmarking with clock locking for stable measurements"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "nvidia-ml-py>=12.0.0",
    "numpy>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cute_bench*"]
